--- a/src/main/resources/com/avatarduel/GUI/Board/Board.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Board/Board.fxml
@@ -20,12 +20,12 @@
             <fx:include fx:id="handA" source="Hand.fxml" />
          </children>
       </HBox>
-      <HBox layoutX="360.0" layoutY="584.0" prefHeight="173.0" prefWidth="874.0" spacing="16.0">
+      <HBox layoutX="474.0" layoutY="576.0" prefHeight="173.0" prefWidth="874.0" spacing="16.0">
          <children>
             <fx:include fx:id="fieldA" source="Field.fxml" />
          </children>
       </HBox>
-      <HBox layoutX="360.0" layoutY="216.0" prefHeight="274.0" prefWidth="1291.0" spacing="16.0">
+      <HBox layoutX="471.0" layoutY="208.0" prefHeight="333.0" prefWidth="1007.0" spacing="16.0">
          <children>
             <fx:include fx:id="fieldB" source="Field.fxml" />
          </children>
@@ -50,16 +50,18 @@
             <fx:include fx:id="playerBStatus" source="PlayerStatus.fxml" />
          </children>
       </HBox>
-      <Rectangle id="pembatas" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="15.0" layoutX="376.0" layoutY="561.0" stroke="BLACK" strokeType="INSIDE" width="1323.0" />
-      <VBox layoutX="1728.0" layoutY="368.0">
-         <fx:include fx:id="gameStatus" source="GameStatus.fxml" />
+      <Rectangle id="pembatas" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="15.0" layoutX="367.0" layoutY="546.0" stroke="BLACK" strokeType="INSIDE" width="1323.0" />
+      <VBox layoutX="1744.0" layoutY="459.0">
+         <children>
+            <fx:include fx:id="gameStatus" source="GameStatus.fxml" />
+         </children>
       </VBox>
       <VBox layoutX="1764.0" layoutY="848.0" prefHeight="206.0" prefWidth="104.0">
          <children>
             <fx:include fx:id="deckA" source="Deck.fxml" />
          </children>
       </VBox>
-      <Button fx:id="end_turn" layoutX="757.0" layoutY="553.0" mnemonicParsing="false" onMouseClicked="#endTurn" prefHeight="31.0" prefWidth="96.0" text="End Turn" />
-      <Button fx:id="end_phase" layoutX="879.0" layoutY="553.0" mnemonicParsing="false" onMouseClicked="#endPhase" text="End Phase" />
+      <Button fx:id="end_turn" layoutX="783.0" layoutY="538.0" mnemonicParsing="false" onMouseClicked="#endTurn" prefHeight="31.0" prefWidth="96.0" text="End Turn" />
+      <Button fx:id="end_phase" layoutX="949.0" layoutY="538.0" mnemonicParsing="false" onMouseClicked="#endPhase" text="End Phase" />
    </children>
 </AnchorPane>
