--- a/src/main/resources/com/avatarduel/GUI/Card/CardGUI.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Card/CardGUI.fxml
@@ -8,11 +8,11 @@
 
 <VBox fx:id="card_border" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="303.0" styleClass="water_border" stylesheets="@styles/CardGUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Card.DisplayCardController">
    <children>
-      <VBox fx:id="card_container" alignment="TOP_CENTER" layoutX="25.0" layoutY="15.0" maxWidth="-Infinity" prefHeight="347.0" prefWidth="268.0" spacing="10.0" styleClass="container">
+      <VBox fx:id="card_container" alignment="TOP_CENTER" layoutX="25.0" layoutY="15.0" maxWidth="-Infinity" prefHeight="373.0" prefWidth="268.0" spacing="10.0" styleClass="container">
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="59.0" prefWidth="258.0" spacing="10.0">
+            <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="51.0" prefWidth="258.0" spacing="10.0">
                <children>
-                  <ImageView fx:id="card_icon" fitHeight="54.0" fitWidth="54.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="card_icon" fitHeight="44.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true" />
                   <Label fx:id="card_name" alignment="CENTER" text="Card Name" />
                </children>
             </HBox>
@@ -21,7 +21,7 @@
                   <Image url="@../../card/image/character/Aang.png" />
                </image>
             </ImageView>
-            <Label fx:id="card_desc" alignment="TOP_LEFT" prefHeight="103.0" prefWidth="200.0" text="This is just a template for selected card, and displaying card" textAlignment="CENTER" wrapText="true" />
+            <Label fx:id="card_desc" alignment="TOP_LEFT" prefHeight="103.0" prefWidth="250.0" text="This is just a template for selected card, and displaying card" textAlignment="CENTER" wrapText="true" />
             <HBox fx:id="card_attributes" alignment="BOTTOM_CENTER" prefHeight="14.0" prefWidth="238.0" spacing="15.0">
                <children>
                   <Label fx:id="card_atk" text="ATK : 8" />
