--- a/src/main/resources/com/avatarduel/GUI/Board/Board.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Board/Board.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Board.BoardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Board.BoardController">
    <children>
       <HBox layoutX="435.0" layoutY="20.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="100.0" prefWidth="892.0" spacing="16.0">
          <children>
@@ -51,7 +49,7 @@
          </children>
       </HBox>
       <Rectangle id="pembatas" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="15.0" layoutX="367.0" layoutY="546.0" stroke="BLACK" strokeType="INSIDE" width="1323.0" />
-      <VBox layoutX="1744.0" layoutY="459.0">
+      <VBox layoutX="1721.0" layoutY="439.0" prefHeight="226.0" prefWidth="176.0">
          <children>
             <fx:include fx:id="gameStatus" source="GameStatus.fxml" />
          </children>
@@ -61,7 +59,7 @@
             <fx:include fx:id="deckA" source="Deck.fxml" />
          </children>
       </VBox>
-      <Button fx:id="end_turn" layoutX="783.0" layoutY="538.0" mnemonicParsing="false" onMouseClicked="#endTurn" prefHeight="31.0" prefWidth="96.0" text="End Turn" />
-      <Button fx:id="end_phase" layoutX="949.0" layoutY="538.0" mnemonicParsing="false" onMouseClicked="#endPhase" text="End Phase" />
+      <Button fx:id="end_turn" layoutX="1761.0" layoutY="705.0" mnemonicParsing="false" onMouseClicked="#endTurn" prefHeight="31.0" prefWidth="96.0" text="End Turn" />
+      <Button fx:id="end_phase" layoutX="1761.0" layoutY="754.0" mnemonicParsing="false" onMouseClicked="#endPhase" prefHeight="31.0" prefWidth="96.0" text="End Phase" />
    </children>
 </AnchorPane>
