--- a/src/main/resources/com/avatarduel/GUI/Board/Field.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Board/Field.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="305.0" prefWidth="1203.0" stylesheets="@styles/Field.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Board.FieldController">
+<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="305.0" prefWidth="1203.0" stylesheets="@styles/Field.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Board.FieldController">
    <children>
       <VBox fx:id="card_container" prefHeight="317.0" prefWidth="1064.0">
          <children>
@@ -18,7 +20,7 @@
                   <fx:include fx:id="character6" source="../Card/CharacterCardInField.fxml" />
                </children>
             </HBox>
-            <HBox fx:id="skill_container" prefHeight="146.0" prefWidth="1021.0" spacing="80.0">
+            <HBox fx:id="skill_container" prefHeight="146.0" prefWidth="1021.0" spacing="50.0">
                <children>
                   <fx:include fx:id="skill1" source="../Card/SkillCardInField.fxml" />
                   <fx:include fx:id="skill2" source="../Card/SkillCardInField.fxml" />
