--- a/src/main/resources/com/avatarduel/GUI/Card/CharacterCardInField.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Card/CharacterCardInField.fxml
@@ -7,56 +7,55 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#showSelectedCard" onMouseEntered="#showActions" onMouseExited="#hideActions" prefHeight="162.0" prefWidth="158.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Card.CharacterCardInFieldController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#showSelectedCard" onMouseEntered="#showActions" onMouseExited="#hideActions" prefHeight="162.0" prefWidth="160.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Card.CharacterCardInFieldController">
    <children>
-      <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="162.0" prefWidth="128.0" spacing="5.0" styleClass="container" stylesheets="@styles/CardGUI.css">
+      <VBox fx:id="card_border" alignment="TOP_CENTER" prefHeight="106.0" prefWidth="128.0" spacing="5.0" styleClass="container" stylesheets="@styles/CardGUI.css">
          <children>
-            <VBox fx:id="card_border" alignment="TOP_CENTER" prefHeight="106.0" prefWidth="128.0" spacing="5.0">
+            <HBox alignment="CENTER" prefHeight="19.0" prefWidth="110.0" spacing="5.0">
                <children>
-                  <HBox alignment="CENTER" prefHeight="19.0" prefWidth="110.0" spacing="5.0">
-                     <children>
-                        <ImageView fx:id="card_icon" fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../card/icon/character_icon.png" />
-                           </image>
-                        </ImageView>
-                        <Label fx:id="card_name" alignment="CENTER" prefHeight="27.0" prefWidth="60.0" text="NAMA KARTU" wrapText="true">
-                           <font>
-                              <Font size="9.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-                  <ImageView fx:id="card_img" fitHeight="69.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="card_icon" fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../card/image/character/Aang.png" />
+                        <Image url="@../../card/icon/character_icon.png" />
                      </image>
                   </ImageView>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <Label fx:id="card_atk" text="ATK : 8">
-                           <font>
-                              <Font size="9.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="card_def" text="DEF : 9">
-                           <font>
-                              <Font size="9.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="card_pow" text="POW : 2">
-                           <font>
-                              <Font size="9.0" />
-                           </font>
-                        </Label>
-                     </children>
-                     <VBox.margin>
-                        <Insets left="10.0" />
-                     </VBox.margin>
-                  </VBox>
+                  <Label fx:id="card_name" alignment="CENTER" prefHeight="27.0" prefWidth="60.0" text="NAMA KARTU" wrapText="true">
+                     <font>
+                        <Font size="9.0" />
+                     </font>
+                  </Label>
                </children>
+            </HBox>
+            <ImageView fx:id="card_img" fitHeight="69.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../card/image/character/Aang.png" />
+               </image>
+            </ImageView>
+            <VBox prefHeight="51.0" prefWidth="112.0">
+               <children>
+                  <Label fx:id="card_atk" text="ATK : 8">
+                     <font>
+                        <Font size="9.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="card_def" text="DEF : 9">
+                     <font>
+                        <Font size="9.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="card_pow" text="POW : 2">
+                     <font>
+                        <Font size="9.0" />
+                     </font>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets left="10.0" />
+               </VBox.margin>
             </VBox>
          </children>
+         <HBox.margin>
+            <Insets />
+         </HBox.margin>
          <padding>
             <Insets top="5.0" />
          </padding>
