howtoplay, showcard kelar

--- a/src/main/resources/com/avatarduel/GUI/MainMenu/HowToPlay/Page3.fxml
+++ b/src/main/resources/com/avatarduel/GUI/MainMenu/HowToPlay/Page3.fxml
@@ -80,8 +80,7 @@
             <Font name="Franklin Gothic Demi Cond" size="48.0" />
          </font>
       </Label>
-      <Button layoutX="592.0" layoutY="685.0" mnemonicParsing="false" text="Next" />
-      <Button layoutX="383.0" layoutY="685.0" mnemonicParsing="false" text="Exit" />
+      <Button fx:id="exitButton" layoutX="465.0" layoutY="677.0" mnemonicParsing="false" text="Exit" />
       <Label layoutX="19.0" layoutY="123.0" prefHeight="113.0" prefWidth="963.0" text="There are 3 card types, character, land, and skill. You can only play one land card per turn, and it generates attribute power every turn for each land card on that attribute. Skill card are cards that can only be used once, and are used to manipulate either enemy or ally character card, to destroy, buff, and debuff them. Character card can attack opposing character card each turn, or do direct damage to enemy" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="18.0" />
