--- a/src/main/resources/com/avatarduel/GUI/Popup/AttackPopup.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Popup/AttackPopup.fxml
@@ -6,14 +6,15 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="249.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="249.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="title" layoutX="152.0" layoutY="43.0" text="Select a Character To Attack">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <ChoiceBox fx:id="choice_dialog" layoutX="143.0" layoutY="115.0" prefHeight="31.0" prefWidth="315.0" />
+      <ChoiceBox fx:id="choice_box" layoutX="143.0" layoutY="115.0" prefHeight="31.0" prefWidth="315.0" />
       <Button fx:id="attack_button" layoutX="162.0" layoutY="193.0" mnemonicParsing="false" text="Attack" />
       <Button fx:id="cancel_button" layoutX="352.0" layoutY="193.0" mnemonicParsing="false" text="Cancel" />
    </children>
