--- a/bin/main/com/avatarduel/GUI/Board/Deck.fxml
+++ b/bin/main/com/avatarduel/GUI/Board/Deck.fxml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.shape.*?>
 <?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 
 <VBox prefHeight="232.0" prefWidth="103.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Board.DeckController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="147.0" stroke="BLACK" strokeType="INSIDE" width="103.0" />
+      <StackPane prefHeight="150.0" prefWidth="200.0">
+         <children>
+            <Rectangle fx:id="shape" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="147.0" stroke="BLACK" strokeType="INSIDE" width="103.0"/>
+         </children>
+      </StackPane>
       <Label fx:id="deck_size" prefHeight="92.0" prefWidth="103.0" text="Deck : 45/50" wrapText="true" />
    </children>
 </VBox>
