--- a/bin/main/com/avatarduel/GUI/Board/Board.fxml
+++ b/bin/main/com/avatarduel/GUI/Board/Board.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Board.BoardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Board.BoardController">
    <children>
       <HBox layoutX="435.0" layoutY="20.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="100.0" prefWidth="892.0" spacing="16.0">
          <children>
@@ -20,12 +18,12 @@
             <fx:include fx:id="handA" source="Hand.fxml" />
          </children>
       </HBox>
-      <HBox layoutX="360.0" layoutY="584.0" prefHeight="173.0" prefWidth="874.0" spacing="16.0">
+      <HBox layoutX="474.0" layoutY="576.0" prefHeight="173.0" prefWidth="874.0" spacing="16.0">
          <children>
             <fx:include fx:id="fieldA" source="Field.fxml" />
          </children>
       </HBox>
-      <HBox layoutX="360.0" layoutY="216.0" prefHeight="274.0" prefWidth="1291.0" spacing="16.0">
+      <HBox layoutX="471.0" layoutY="208.0" prefHeight="333.0" prefWidth="1007.0" spacing="16.0">
          <children>
             <fx:include fx:id="fieldB" source="Field.fxml" />
          </children>
@@ -50,15 +48,17 @@
             <fx:include fx:id="playerBStatus" source="PlayerStatus.fxml" />
          </children>
       </HBox>
-      <Rectangle id="pembatas" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="15.0" layoutX="376.0" layoutY="561.0" stroke="BLACK" strokeType="INSIDE" width="1323.0" />
-      <Rectangle id="status_game" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="565.0" layoutX="1733.0" layoutY="250.0" stroke="BLACK" strokeType="INSIDE" width="166.0" />
-      <Text layoutX="1739.0" layoutY="540.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Status Game disini" />
+      <Rectangle id="pembatas" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="15.0" layoutX="367.0" layoutY="546.0" stroke="BLACK" strokeType="INSIDE" width="1323.0" />
+      <VBox layoutX="1721.0" layoutY="439.0" prefHeight="226.0" prefWidth="176.0">
+         <children>
+            <fx:include fx:id="gameStatus" source="GameStatus.fxml" />
+         </children>
+      </VBox>
       <VBox layoutX="1764.0" layoutY="848.0" prefHeight="206.0" prefWidth="104.0">
          <children>
             <fx:include fx:id="deckA" source="Deck.fxml" />
          </children>
       </VBox>
-      <Button fx:id="end_turn" layoutX="757.0" layoutY="553.0" mnemonicParsing="false" onMouseClicked="#endTurn" prefHeight="31.0" prefWidth="96.0" text="End Turn" />
-      <Button fx:id="end_phase" layoutX="879.0" layoutY="553.0" mnemonicParsing="false" onMouseClicked="#endPhase" text="End Phase" />
+      <Button fx:id="end_turn" layoutX="1761.0" layoutY="705.0" mnemonicParsing="false" onMouseClicked="#endTurn" prefHeight="31.0" prefWidth="96.0" text="End Turn" />
    </children>
 </AnchorPane>
