--- a/src/main/resources/com/avatarduel/GUI/Board/PlayerStatus.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Board/PlayerStatus.fxml
@@ -25,7 +25,7 @@
                 </Label>
                 <ImageView fx:id="player_image" fitHeight="173.0" fitWidth="136.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../../character/kira_yoshikage.png" />
+                        <Image url="@character/kira_yoshikage.png" />
                     </image>
                     <viewport>
                         <Rectangle2D />
